--- a/Perspektiva/Areas/Admin/Views/Perspective/Create.cshtml
+++ b/Perspektiva/Areas/Admin/Views/Perspective/Create.cshtml
@@ -6,7 +6,6 @@
 
 <!DOCTYPE html>
 
-<html>
 
 <head>
     <meta charset="utf-8">
@@ -18,69 +17,79 @@
     <link rel="stylesheet" href="~/css/site.css">
     <link rel="stylesheet" href="~/css/map.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx4l17T01zXX2DOGy1lh84cDFsWoBvIWU&callback=initMap&v=weekly"
-        defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx4l17T01zXX2DOGy1lh84cDFsWoBvIWU&callback=initMap&v=weekly"
+            defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
 </head>
+<body>
+    <div class="container">
+        <h4>Pripravi perspektivo</h4>
+        <hr />
+        <div class="row">
+            <div class="col-lg-12">
+                @using (Html.BeginForm("Create", "Perspective", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
 
+                    <div class="form-group">
+                        <label for="InputTitle">Title</label>
+                        @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputLatitude">Latitude</label>
+                        @Html.TextBoxFor(m => m.Latitude, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputLongitude">Longitude</label>
+                        @Html.TextBoxFor(m => m.Longitude, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputLongitude">Difficulty</label>
+                        @Html.DropDownListFor(m => m.Difficulty, new List<SelectListItem>
+                    {
+                    new SelectListItem{Text="1", Value="1"},
+                    new SelectListItem{Text="2", Value="2"},
+                    new SelectListItem{Text="3", Value="3"},
+                    new SelectListItem{Text="4", Value="4"},
+                    new SelectListItem{Text="5", Value="5"},
 
-<h1>Create</h1>
+                    }, "Please select")
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputDescription">Description</label>
+                        @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                            </div>
+                            <div class="custom-file">
+                                @Html.TextBoxFor(m => m.PerspectivePicture, new { type = "file" })
+                                <input type="file" class="custom-file-input" id="inputGroupFile01"
+                                   aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                            </div>
+                        </div>
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
 
-<h4>PerspectivesViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                }
             </div>
-            <div class="form-group">
-                <label asp-for="Latitude" class="control-label"></label>
-                <input asp-for="Latitude" class="form-control" />
-                <span asp-validation-for="Latitude" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" />
-                <span asp-validation-for="Longitude" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Difficulty" class="control-label"></label>
-                <input asp-for="Difficulty" class="form-control" />
-                <span asp-validation-for="Difficulty" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PerspectivePicture" class="control-label"></label>
-                <input asp-for="PerspectivePicture" class="form-control" />
-                <span asp-validation-for="PerspectivePicture" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
+</body>
