--- a/Perspektiva/Areas/Admin/Views/Perspective/Create.cshtml
+++ b/Perspektiva/Areas/Admin/Views/Perspective/Create.cshtml
@@ -72,8 +72,8 @@
                             </div>
                             <div class="custom-file">
                                 @Html.TextBoxFor(m => m.PerspectivePicture, new { type = "file" })
-                                <input type="file" class="custom-file-input" id="inputGroupFile01"
-                                   aria-describedby="inputGroupFileAddon01">
+                                <input class="custom-file-input" id="inputGroupFile01"
+                                   aria-describedby="inputGroupFileAddon01" name="PerspectivePicture" type="file">
                                 <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                             </div>
                         </div>
