--- a/Perspektiva/Areas/Admin/Views/Perspective/Edit.cshtml
+++ b/Perspektiva/Areas/Admin/Views/Perspective/Edit.cshtml
@@ -4,60 +4,102 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Urejevalnik</h1>
 
-<h4>PerspectivesViewModel</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
+
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
+    <link rel="stylesheet" href="~/css/site.css">
+    <link rel="stylesheet" href="~/css/map.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx4l17T01zXX2DOGy1lh84cDFsWoBvIWU&callback=initMap&v=weekly"
+            defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+</head>
+<body>
+    <div class="container">
+        <h4>Uredi perspektivo</h4>
+        <hr />
+        <div class="row">
+            <div class="col-lg-12">
+                @using (Html.BeginForm("Edit", "Perspective", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    @Html.Hidden("Id",Model.ID)
+                    @Html.Hidden("PerspectivePictureByte",Model.PerspectivePictureByte)
+
+                    <div class="form-group">
+                        <label for="InputTitle">Title</label>
+                        @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputLatitude">Latitude</label>
+                        @Html.TextBoxFor(m => m.Latitude, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputLongitude">Longitude</label>
+                        @Html.TextBoxFor(m => m.Longitude, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputLongitude">Difficulty</label>
+                        @Html.DropDownListFor(m => m.Difficulty, new List<SelectListItem>
+                    {
+                    new SelectListItem{Text="1", Value="1"},
+                    new SelectListItem{Text="2", Value="2"},
+                    new SelectListItem{Text="3", Value="3"},
+                    new SelectListItem{Text="4", Value="4"},
+                    new SelectListItem{Text="5", Value="5"},
+
+                    }, "Please select")
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+                    <div class="form-group">
+                        <label for="InputDescription">Description</label>
+                        @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                    </div>
+
+                    <div class="form-group">
+                        <div class="card">
+                            <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.PerspectivePictureByte)" class="card-img-top" alt="ALT" />
+
+                            <div class="card-footer">
+                                <label class="form-label" for="customFile">Default file input example</label>
+
+                                @Html.EditorFor(model => model.PerspectivePictureFile, new { htmlAttributes = new { @class = "form-control form-control-sm", @type = "file" } })
+
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="d-grid gap-2 d-md-block">
+                        <button class="btn btn-primary" type="submit">Update</button>
+                     
+                        <button class="btn btn-secondary" type ="button" onclick="location.href='@Url.Action("Index","Perspective")'"> Back</button>
+                    </div>
+
+                }
             </div>
-            <div class="form-group">
-                <label asp-for="Latitude" class="control-label"></label>
-                <input asp-for="Latitude" class="form-control" />
-                <span asp-validation-for="Latitude" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" />
-                <span asp-validation-for="Longitude" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Difficulty" class="control-label"></label>
-                <input asp-for="Difficulty" class="form-control" />
-                <span asp-validation-for="Difficulty" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PerspectivePicture" class="control-label"></label>
-                <input asp-for="PerspectivePicture" class="form-control" />
-                <span asp-validation-for="PerspectivePicture" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
+    }
+    </body>
