--- a/Perspektiva/Areas/Admin/Views/Perspective/Index.cshtml
+++ b/Perspektiva/Areas/Admin/Views/Perspective/Index.cshtml
@@ -18,11 +18,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 </head>
 
 
+<div class="d-grid gap-2 d-md-block">
+    <button class="btn btn-secondary" type="button" onclick="location.href='@Url.Action("Create","Perspective")'"> Create</button>
+    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Index","Home", new { Area = "" })'"> Back</button>
+</div>
 <body>
+
     <div class="container">
+
 
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <!-- enota -->
@@ -31,8 +39,8 @@
 
 
                 <div class="col">
-                    <div class="card">
-                        <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.PerspectivePictureByte)" class="card-img-top" alt="ALT"  />
+                    <div class="card js-tilt">
+                        <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.PerspectivePictureByte)" class="card-img-top" alt="ALT" />
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center">
 
@@ -56,7 +64,7 @@
                                 Info<i class="fas fa-envelope ms-2"></i>
                             </a>
                             <a class="btn btn-link m-0 text-reset"
-                           href= @Url.Action(action: "Edit", controller: "Perspective",  new { id = item.ID })
+                           href=@Url.Action(action: "Edit", controller: "Perspective", new { id = item.ID })
                            role="button"
                            data-ripple-color="primary">
                                 Edit<i class="fas fa-phone ms-2"></i>
@@ -80,5 +88,13 @@
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
     }
+        <script>
+            $('.js-tilt').tilt({
+                scale: 1.00,
+                perspective: 500
+            })
+
+  
+        </script>
     </body>
 
