--- a/Perspektiva/Areas/Admin/Views/AdminPerspective/Edit.cshtml
+++ b/Perspektiva/Areas/Admin/Views/AdminPerspective/Edit.cshtml
@@ -31,7 +31,7 @@
         <hr />
         <div class="row">
             <div class="col-lg-12">
-                @using (Html.BeginForm("Edit", "Perspective", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                @using (Html.BeginForm("Edit", "AdminPerspective", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
                     @Html.Hidden("Id",Model.ID)
                     @Html.Hidden("PerspectivePictureByte",Model.PerspectivePictureByte)
@@ -39,17 +39,17 @@
                     <div class="form-group">
                         <label for="InputTitle">Title</label>
                         @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
-                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                        
                     </div>
                     <div class="form-group">
                         <label for="InputLatitude">Latitude</label>
                         @Html.TextBoxFor(m => m.Latitude, new { @class = "form-control" })
-                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                        
                     </div>
                     <div class="form-group">
                         <label for="InputLongitude">Longitude</label>
                         @Html.TextBoxFor(m => m.Longitude, new { @class = "form-control" })
-                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                        
                     </div>
                     <div class="form-group">
                         <label for="InputLongitude">Difficulty</label>
@@ -62,12 +62,12 @@
                     new SelectListItem{Text="5", Value="5"},
 
                     }, "Please select")
-                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                        
                     </div>
                     <div class="form-group">
                         <label for="InputDescription">Description</label>
                         @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
-                        @*<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                        
                     </div>
 
                     <div class="form-group">
@@ -88,7 +88,7 @@
                     <div class="d-grid gap-2 d-md-block">
                         <button class="btn btn-primary" type="submit">Update</button>
                      
-                        <button class="btn btn-secondary" type ="button" onclick="location.href='@Url.Action("Index","Perspective")'"> Back</button>
+                        <button class="btn btn-secondary" type ="button" onclick="location.href='@Url.Action("Index","AdminPerspective")'"> Back</button>
                     </div>
 
                 }
