--- a/Perspektiva/Views/Home/Index.cshtml
+++ b/Perspektiva/Views/Home/Index.cshtml
@@ -1,38 +1,240 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@{
+    ViewData["Title"] = "Home Page";
+}
+
+<!DOCTYPE html>
+
+<html>
+
 <head>
-   <meta charset="UTF-8">
-   <title>CSS Tutorial</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Untitled</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
-
-
+    <link rel="stylesheet" href="~/css/site.css">
+    <link rel="stylesheet" href="~/css/map.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx4l17T01zXX2DOGy1lh84cDFsWoBvIWU&callback=initMap&v=weekly"
+        defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-  
-
 </head>
-<body>
-
-    <!-- naredi grid-->
-    <!-- napisi logiko ki bo dodajala prikazovala perpektive uporabnika...-->
-    <!-- -->
 
 
-<img style="height: 100px" data-tilt data-tilt-max="20" data-tilt-speed="400" data-tilt-perspective="500" src="https://cdn.britannica.com/67/19367-050-885866B4/Valley-Taurus-Mountains-Turkey.jpg" class="js-tilt">
+<script id="map-jscode" type="text/javascript">
+
+    var markers = [];
+    var uniqueId = 1;
+
+    let map;
+
+    function initMap() {
+        const mapDiv = document.getElementById("map-js");
+        const map = new google.maps.Map(mapDiv, {
+            center: { lat: 46.1889873, lng: 14.7839395 },
+            zoom: 8,
+            disableDefaultUI: true,
+            //mapTypeId: 'terrain' //TODO: style terrain map
+            mapId: "989e6e56568e2cc6"
+        });
+        map.setTilt(45);
 
 
-<script>
-$('.js-tilt').tilt({
-    scale: 1.2
-})
+        //alert
+        //google.maps.event.addListener(map, 'click', function( event ){
+        //       alert( "Latitude: "+event.latLng.lat()+" "+", longitude: "+event.latLng.lng() );
+        //    });
+
+
+        //Attach click event handler to the map.
+        google.maps.event.addListener(map, 'click', function (e) {
+
+            //Determine the location where the user has clicked.
+            var location = e.latLng;
+
+            const image = "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png";
+
+            //Create a marker and placed it on the map.
+            var marker = new google.maps.Marker({
+                position: location,
+                map: map,
+                icon: image,
+                draggingCursor: 'pointer',
+
+            });
+
+            //Attach click event handler to the map.
+
+            //Set unique id
+            marker.id = uniqueId;
+
+
+
+            if (marker.id > 1) {
+
+                DeleteMarker(uniqueId - 1);
+            }
+
+            //Attach click event handler to the marker.
+            google.maps.event.addListener(marker, "click", function (e) {
+
+                var content = 'Latitude: ' + location.lat() + '<br />Longitude: ' + location.lng();
+                //content += "<br /><input type = 'button' va;ue = 'Delete' onclick = 'DeleteMarker(" + marker.id + ");' value = 'Delete' />";
+                content += '<br /> uniqueId:' + marker.id;
+
+                var infoWindow = new google.maps.InfoWindow({ content: content });
+                infoWindow.open(map, marker);
+
+
+            });
+            uniqueId++;
+
+
+            //Add marker to the array.
+            markers.push(marker);
+        });
+    };
+
+
+    window.initMap = initMap;
+
+
+    function DeleteMarker(id) {
+        //Find and remove the marker from the Array
+        for (var i = 0; i < markers.length; i++) {
+            if (markers[i].id == id) {
+                //Remove the marker from Map
+                markers[i].setMap(null);
+
+                //Remove the marker from array.
+                markers.splice(i, 1);
+                return;
+            }
+        }
+    };
+
+
 </script>
 
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+
+<script type="text/javascript">
+
+    function CollectUserGuess() {
+        if (markers.length == 0) {
+            throw new Error("Select a location idiot");
+
+        } else {
+            ///fill guessed
+            var guessjson = 
+
+                {
+                    "Latitude": markers[0].position.lat(),
+                    "Longitude": markers[0].position.lng()
+                };
+
+                return guessjson;
+
+            //console.log(markers[0].position.lat());
+        }
+    }
+
+    function SendLocales() {
+        var guessjson = "";
+        try {
+            guessjson = JSON.stringify(CollectUserGuess());
+            console.log(guessjson);
+
+        } catch (e) {
+            console.log(e);
+            alert(e);
+            return;
+        }
+
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("GetGuessedLocation", "Home")',
+            contentType: "application/json; charset=utf-8",
+            data: {guesspost : guessjson },
+            dataType: "json",
+            success: OnSuccess,
+            failure: function (response) {
+                alert(response.d);
+            }
+        });
+    }
+    function OnSuccess(response) {
+        alert(response.d);
+    }
+
+
+
+
+</script>
+
+
+
+<body>
+    <div class="container-all pb-5">
+        <div class="container-map">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h1 class="text-center"></h1>
+                    <div class="map-window">
+                        <div class="container">
+                            <div class="card-map">
+                                <div class="">
+                                    <div id="picture_set" style=" height: 100%;">
+                                        @*TODO: fix corners*@
+                                        <img style=" max-width: 100%; max-height: 100%; border-radius: 2vh;"
+                                            src="https://wallpaperaccess.com/full/702365.jpg" alt="Italian Trulli">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-map">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h1 class="text-center"></h1>
+                    <div class="map-window">
+                        <div class="container">
+                            <div class="card-map">
+                                <div class="">
+                                    <div>
+                                        <div id="map-js" style="width:100%;height:400px; border-radius: 2vh;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <input type="submit" value="Btn" class="btn btn-primary" id="btnSubmitGuess" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
+<script id="onloadjs" type="text/javascript">
+
+    $(document).ready(function () {
+
+        var btn = document.getElementById("btnSubmitGuess");
+
+        btn.addEventListener("click", function () {
+            SendLocales();
+        }, false);
+
+    });
+
+
+</script>
+
+
 </html>
