--- a/Perspektiva/Views/Perspective/SubmitGuess.cshtml
+++ b/Perspektiva/Views/Perspective/SubmitGuess.cshtml
@@ -1,26 +1,39 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model Perspektiva.Areas.Admin.Models.PerspectivesViewModel
+
+@{
+    ViewData["Title"] = "Index";
 }
 
-<!DOCTYPE html>
+<h1>Submit guess</h1>
 
-<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Untitled</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="~/css/mdb.min.css">
+    <link rel="stylesheet" href="~/css/mdb.min.css.map">
+    <link rel="stylesheet" href="~/css/rainbow_button.css">
+    <link rel="stylesheet" href="~/css/MyPerspectives.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="~/css/site.css">
     <link rel="stylesheet" href="~/css/map.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx4l17T01zXX2DOGy1lh84cDFsWoBvIWU&callback=initMap&v=weekly"
-        defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx4l17T01zXX2DOGy1lh84cDFsWoBvIWU&callback=initMap&v=weekly"
+            defer></script>
+
+
+
+
 
 </head>
 
@@ -51,7 +64,7 @@
 
 
         //Attach click event handler to the map.
-        google.maps.event.addListener(map, 'click', function (e) {
+        google.maps.event.addListener(map, 'click', function(e) {
 
             //Determine the location where the user has clicked.
             var location = e.latLng;
@@ -80,7 +93,7 @@
             }
 
             //Attach click event handler to the marker.
-            google.maps.event.addListener(marker, "click", function (e) {
+            google.maps.event.addListener(marker, "click", function(e) {
 
                 var content = 'Latitude: ' + location.lat() + '<br />Longitude: ' + location.lng();
                 //content += "<br /><input type = 'button' va;ue = 'Delete' onclick = 'DeleteMarker(" + marker.id + ");' value = 'Delete' />";
@@ -129,14 +142,14 @@
 
         } else {
             ///fill guessed
-            var guessjson = 
+            var guessjson =
 
-                {
-                    "Latitude": markers[0].position.lat(),
-                    "Longitude": markers[0].position.lng()
-                };
+            {
+                "Latitude": markers[0].position.lat(),
+                "Longitude": markers[0].position.lng()
+            };
 
-                return guessjson;
+            return guessjson;
 
             //console.log(markers[0].position.lat());
         }
@@ -156,12 +169,12 @@
 
         $.ajax({
             type: "GET",
-            url: '@Url.Action("GetGuessedLocation", "Home")',
+            url: '@Url.Action("GetGuessedLocation", "Perspective")',
             contentType: "application/json; charset=utf-8",
-            data: {guesspost : guessjson },
+            data: { guesspost: guessjson },
             dataType: "json",
             success: OnSuccess,
-            failure: function (response) {
+            failure: function(response) {
                 alert(response.d);
             }
         });
@@ -175,53 +188,67 @@
 
 </script>
 
-
-
+<div class="d-grid gap-2 d-md-block">
+    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Index","Home", new { Area = "" })'"> Back</button>
+</div>
 <body>
-    <div class="container-all pb-5">
-        <div class="container-map">
-            <div class="row">
-                <div class="col-md-8 offset-md-2">
-                    <h1 class="text-center"></h1>
-                    <div class="map-window">
-                        <div class="container">
-                            <div class="card-map">
-                                <div class="">
-                                    <div id="picture_set" style=" height: 100%;">
-                                        @*TODO: fix corners*@
-                                        <img style=" max-width: 100%; max-height: 100%; border-radius: 2vh;"
-                                            src="https://wallpaperaccess.com/full/702365.jpg" alt="Italian Trulli">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+    <div class="container">
+        <div class="container-perspective">
+            <div class="card mb-3">
+                <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.PerspectivePictureByte)" class="card-img-top" alt="ALT" />
+
+                <div class="card-body">
+                    <h5 class="card-title" style="word-wrap: break-word">@Model.Title</h5>
+                    <p class="card-text">@Model.Description</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
         </div>
+
         <div class="container-map">
-            <div class="row">
-                <div class="col-md-8 offset-md-2">
-                    <h1 class="text-center"></h1>
-                    <div class="map-window">
-                        <div class="container">
-                            <div class="card-map">
-                                <div class="">
-                                    <div>
-                                        <div id="map-js" style="width:100%;height:400px; border-radius: 2vh;"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <input type="submit" value="Btn" class="btn btn-primary" id="btnSubmitGuess" />
+
+
+
+            <div class="card mb-3">
+
+                <div class="card-map">
+                    <div class="">
+                        <div>
+                            <div id="map-js" style="width:100%;height:1000px; "></div>
                         </div>
                     </div>
+                    <div class="card-body">
+
+
+                        <input type="submit" value="Btn" class="btn btn-primary" id="btnSubmitGuess" />
+                    </div>
                 </div>
+
+
             </div>
+
+
+
         </div>
     </div>
-</body>
 
-<script id="onloadjs" type="text/javascript">
+
+    @section Scripts {
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
+    }
+        <script>
+            $('.js-tilt').tilt({
+                scale: 1.00,
+                perspective: 500
+            })
+
+
+        </script>
+
+        <script id="onloadjs" type="text/javascript">
 
     $(document).ready(function () {
 
@@ -237,4 +264,5 @@
 </script>
 
 
-</html>
+    </body>
+
