--- a/Perspektiva/Areas/Admin/Views/AdminPerspective/Index.cshtml
+++ b/Perspektiva/Areas/Admin/Views/AdminPerspective/Index.cshtml
@@ -39,7 +39,7 @@
 
 
                 <div class="col">
-                    <div class="card js-tilt">
+                    <div class="card">
                         <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.PerspectivePictureByte)" class="card-img-top" alt="ALT" />
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center">
