fixed dependencies in layout, admin menu, admin dash entrypoint

--- a/Perspektiva/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Perspektiva/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,16 +4,43 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Perspektiva</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/map.css">
     <link rel="stylesheet" href="~/Perspektiva.styles.css" asp-append-version="true" />
 
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+
+    <link rel="stylesheet" href="~/css/mdb.min.css">
+    <link rel="stylesheet" href="~/css/mdb.min.css.map">
+    <style>
+
+        .adminHref {
+            font-weight: bold;
+        }
+
+    </style>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="background-color:aqua">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Perspektiva</a>
+                <a class="navbar-brand" asp-area="Admin" asp-controller="AdminPerspective" asp-action="Index">Admin Dashboard</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,10 +48,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminPerspective" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminPerspective" asp-action="Create">Create</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-1">
+
+                        <li class="nav-item adminHref">
+                            <a class="nav-link text-dark" href="~/Identity/Account/Manage">Identity Dashboard</a>
+                        </li>
+                        <li class="nav-item adminHref">
+                            <a class="nav-link text-dark" href="~/CoreAdmin">Core Admin</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -32,8 +68,8 @@
             </div>
         </nav>
     </header>
-    <div class="container-page">
-        <main role="main" class="pb-3">
+    <div class="container-page pb-lg-5">
+        <main role="main" class="pb-lg-5">
             @RenderBody()
         </main>
     </div>
