--- a/Perspektiva/Views/Home/MyPerspectives.cshtml
+++ b/Perspektiva/Views/Home/MyPerspectives.cshtml
@@ -27,10 +27,10 @@
 </head>
 
 
-<div class="d-grid gap-2 d-md-block">
+@*<div class="d-grid gap-2 d-md-block">
     <button class="btn btn-secondary" type="button" onclick="location.href='@Url.Action("Create","AdminPerspective")'"> Create</button>
     <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Index","Home", new { Area = "" })'"> Back</button>
-</div>
+</div>*@
 <body>
 
     <div class="container">
