--- a/Perspektiva/Areas/Admin/Views/AdminPerspective/Index.cshtml
+++ b/Perspektiva/Areas/Admin/Views/AdminPerspective/Index.cshtml
@@ -4,22 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Indexdf</h1>
+<h1>Admin index</h1>
 
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Untitled</title>
-
-    <link rel="stylesheet" href="~/css/mdb.min.css">
-    <link rel="stylesheet" href="~/css/mdb.min.css.map">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 </head>
 
 
@@ -27,6 +18,7 @@
     <button class="btn btn-secondary" type="button" onclick="location.href='@Url.Action("Create","AdminPerspective")'"> Create</button>
     <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Index","Home", new { Area = "" })'"> Back</button>
 </div>
+
 <body>
 
     <div class="container">
